--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,8 @@
     "es6": true
   },
   "globals": {
-    "Swiper": false,
-    "swiper": false
+    "ClipboardJS": false,
+    "Zepto": false
   },
   "rules": {
     "indent": ["error", 2, {
